// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Maps with a trial license /api/apm/service-map when there is data returns service map elements filtering by environment not defined 1`] = `
Object {
  "elements": Array [
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "elastic-co-frontend",
        "service.environment": "ENVIRONMENT_NOT_DEFINED",
        "service.name": "elastic-co-frontend",
        "serviceAnomalyStats": Object {
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
          "transactionType": "page-load",
        },
      },
    },
    Object {
      "data": Object {
        "groupedConnections": Array [
          Object {
            "id": ">a18132920325.cdn.optimizely.com:443",
            "label": "a18132920325.cdn.optimizely.com:443",
            "span.destination.service.resource": "a18132920325.cdn.optimizely.com:443",
            "span.subtype": "iframe",
            "span.type": "resource",
          },
          Object {
            "id": ">cdn.optimizely.com:443",
            "label": "cdn.optimizely.com:443",
            "span.destination.service.resource": "cdn.optimizely.com:443",
            "span.subtype": "script",
            "span.type": "resource",
          },
          Object {
            "id": ">fonts.googleapis.com:443",
            "label": "fonts.googleapis.com:443",
            "span.destination.service.resource": "fonts.googleapis.com:443",
            "span.subtype": "link",
            "span.type": "resource",
          },
          Object {
            "id": ">images.contentstack.io:443",
            "label": "images.contentstack.io:443",
            "span.destination.service.resource": "images.contentstack.io:443",
            "span.subtype": "css",
            "span.type": "resource",
          },
          Object {
            "id": ">info.elastic.co:443",
            "label": "info.elastic.co:443",
            "span.destination.service.resource": "info.elastic.co:443",
            "span.subtype": "script",
            "span.type": "resource",
          },
          Object {
            "id": ">p.typekit.net:443",
            "label": "p.typekit.net:443",
            "span.destination.service.resource": "p.typekit.net:443",
            "span.subtype": "css",
            "span.type": "resource",
          },
          Object {
            "id": ">static-www.elastic.co:443",
            "label": "static-www.elastic.co:443",
            "span.destination.service.resource": "static-www.elastic.co:443",
            "span.subtype": "img",
            "span.type": "resource",
          },
          Object {
            "id": ">use.typekit.net:443",
            "label": "use.typekit.net:443",
            "span.destination.service.resource": "use.typekit.net:443",
            "span.subtype": "link",
            "span.type": "resource",
          },
          Object {
            "id": ">www.elastic.co:443",
            "label": "www.elastic.co:443",
            "span.destination.service.resource": "www.elastic.co:443",
            "span.subtype": "browser-timing",
            "span.type": "hard-navigation",
          },
        ],
        "id": "resourceGroup{elastic-co-frontend}",
        "label": "9 resources",
        "span.type": "external",
      },
    },
    Object {
      "data": Object {
        "id": "elastic-co-frontend~>resourceGroup{elastic-co-frontend}",
        "source": "elastic-co-frontend",
        "target": "resourceGroup{elastic-co-frontend}",
      },
    },
  ],
}
`;

exports[`Service Maps with a trial license /api/apm/service-map when there is data returns the correct data 3`] = `
Array [
  Object {
    "data": Object {
      "agent.name": "ruby",
      "id": "opbeans-ruby",
      "service.environment": "production",
      "service.name": "opbeans-ruby",
      "serviceAnomalyStats": Object {
        "actualValue": 141536.936507937,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-229a-high_mean_transaction_duration",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "java",
      "id": "opbeans-java",
      "service.environment": "production",
      "service.name": "opbeans-java",
      "serviceAnomalyStats": Object {
        "actualValue": 559010.6,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-229a-high_mean_transaction_duration",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">postgresql",
      "label": "postgresql",
      "span.destination.service.resource": "postgresql",
      "span.subtype": "postgresql",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "rum-js",
      "id": "elastic-co-frontend",
      "service.name": "elastic-co-frontend",
      "serviceAnomalyStats": Object {
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
        "transactionType": "page-load",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "rum-js",
      "id": "opbeans-rum",
      "service.environment": "testing",
      "service.name": "opbeans-rum",
      "serviceAnomalyStats": Object {
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
        "transactionType": "page-load",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "nodejs",
      "id": "opbeans-node",
      "service.environment": "testing",
      "service.name": "opbeans-node",
    },
  },
  Object {
    "data": Object {
      "agent.name": "go",
      "id": "opbeans-go",
      "service.environment": "testing",
      "service.name": "opbeans-go",
    },
  },
  Object {
    "data": Object {
      "agent.name": "python",
      "id": "opbeans-python",
      "service.environment": "production",
      "service.name": "opbeans-python",
      "serviceAnomalyStats": Object {
        "actualValue": 47107.7692307692,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-229a-high_mean_transaction_duration",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">elasticsearch",
      "label": "elasticsearch",
      "span.destination.service.resource": "elasticsearch",
      "span.subtype": "elasticsearch",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "id": ">redis",
      "label": "redis",
      "span.destination.service.resource": "redis",
      "span.subtype": "redis",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "dotnet",
      "id": "opbeans-dotnet",
      "service.environment": null,
      "service.name": "opbeans-dotnet",
    },
  },
  Object {
    "data": Object {
      "groupedConnections": Array [
        Object {
          "id": ">a18132920325.cdn.optimizely.com:443",
          "label": "a18132920325.cdn.optimizely.com:443",
          "span.destination.service.resource": "a18132920325.cdn.optimizely.com:443",
          "span.subtype": "iframe",
          "span.type": "resource",
        },
        Object {
          "id": ">cdn.optimizely.com:443",
          "label": "cdn.optimizely.com:443",
          "span.destination.service.resource": "cdn.optimizely.com:443",
          "span.subtype": "script",
          "span.type": "resource",
        },
        Object {
          "id": ">fonts.googleapis.com:443",
          "label": "fonts.googleapis.com:443",
          "span.destination.service.resource": "fonts.googleapis.com:443",
          "span.subtype": "link",
          "span.type": "resource",
        },
        Object {
          "id": ">images.contentstack.io:443",
          "label": "images.contentstack.io:443",
          "span.destination.service.resource": "images.contentstack.io:443",
          "span.subtype": "css",
          "span.type": "resource",
        },
        Object {
          "id": ">info.elastic.co:443",
          "label": "info.elastic.co:443",
          "span.destination.service.resource": "info.elastic.co:443",
          "span.subtype": "script",
          "span.type": "resource",
        },
        Object {
          "id": ">p.typekit.net:443",
          "label": "p.typekit.net:443",
          "span.destination.service.resource": "p.typekit.net:443",
          "span.subtype": "css",
          "span.type": "resource",
        },
        Object {
          "id": ">static-www.elastic.co:443",
          "label": "static-www.elastic.co:443",
          "span.destination.service.resource": "static-www.elastic.co:443",
          "span.subtype": "img",
          "span.type": "resource",
        },
        Object {
          "id": ">use.typekit.net:443",
          "label": "use.typekit.net:443",
          "span.destination.service.resource": "use.typekit.net:443",
          "span.subtype": "link",
          "span.type": "resource",
        },
        Object {
          "id": ">www.elastic.co:443",
          "label": "www.elastic.co:443",
          "span.destination.service.resource": "www.elastic.co:443",
          "span.subtype": "browser-timing",
          "span.type": "hard-navigation",
        },
      ],
      "id": "resourceGroup{elastic-co-frontend}",
      "label": "9 resources",
      "span.type": "external",
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-go~>postgresql",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-node",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-python",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-java~>postgresql",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 559010.6,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-java~opbeans-node",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 559010.6,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-java~opbeans-ruby",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 559010.6,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~>postgresql",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-java",
      "isInverseEdge": true,
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 559010.6,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-node~opbeans-python",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-node~opbeans-ruby",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>elasticsearch",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": ">elasticsearch",
      "targetData": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>postgresql",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>redis",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": ">redis",
      "targetData": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-node",
      "isInverseEdge": true,
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-python~opbeans-ruby",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~>postgresql",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-go",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-java",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 559010.6,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-node",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-python",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-go",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-java",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 559010.6,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-node",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-python",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-ruby",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "elastic-co-frontend~>resourceGroup{elastic-co-frontend}",
      "source": "elastic-co-frontend",
      "target": "resourceGroup{elastic-co-frontend}",
    },
  },
]
`;

exports[`Service Maps with a trial license when there is data with anomalies with the default apm user returns the correct anomaly stats 3`] = `
Object {
  "elements": Array [
    Object {
      "data": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 141536.936507937,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 559010.6,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "elastic-co-frontend",
        "service.name": "elastic-co-frontend",
        "serviceAnomalyStats": Object {
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
          "transactionType": "page-load",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
          "transactionType": "page-load",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
    Object {
      "data": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
    Object {
      "data": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 47107.7692307692,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-229a-high_mean_transaction_duration",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": null,
        "service.name": "opbeans-dotnet",
      },
    },
    Object {
      "data": Object {
        "groupedConnections": Array [
          Object {
            "id": ">a18132920325.cdn.optimizely.com:443",
            "label": "a18132920325.cdn.optimizely.com:443",
            "span.destination.service.resource": "a18132920325.cdn.optimizely.com:443",
            "span.subtype": "iframe",
            "span.type": "resource",
          },
          Object {
            "id": ">cdn.optimizely.com:443",
            "label": "cdn.optimizely.com:443",
            "span.destination.service.resource": "cdn.optimizely.com:443",
            "span.subtype": "script",
            "span.type": "resource",
          },
          Object {
            "id": ">fonts.googleapis.com:443",
            "label": "fonts.googleapis.com:443",
            "span.destination.service.resource": "fonts.googleapis.com:443",
            "span.subtype": "link",
            "span.type": "resource",
          },
          Object {
            "id": ">images.contentstack.io:443",
            "label": "images.contentstack.io:443",
            "span.destination.service.resource": "images.contentstack.io:443",
            "span.subtype": "css",
            "span.type": "resource",
          },
          Object {
            "id": ">info.elastic.co:443",
            "label": "info.elastic.co:443",
            "span.destination.service.resource": "info.elastic.co:443",
            "span.subtype": "script",
            "span.type": "resource",
          },
          Object {
            "id": ">p.typekit.net:443",
            "label": "p.typekit.net:443",
            "span.destination.service.resource": "p.typekit.net:443",
            "span.subtype": "css",
            "span.type": "resource",
          },
          Object {
            "id": ">static-www.elastic.co:443",
            "label": "static-www.elastic.co:443",
            "span.destination.service.resource": "static-www.elastic.co:443",
            "span.subtype": "img",
            "span.type": "resource",
          },
          Object {
            "id": ">use.typekit.net:443",
            "label": "use.typekit.net:443",
            "span.destination.service.resource": "use.typekit.net:443",
            "span.subtype": "link",
            "span.type": "resource",
          },
          Object {
            "id": ">www.elastic.co:443",
            "label": "www.elastic.co:443",
            "span.destination.service.resource": "www.elastic.co:443",
            "span.subtype": "browser-timing",
            "span.type": "hard-navigation",
          },
        ],
        "id": "resourceGroup{elastic-co-frontend}",
        "label": "9 resources",
        "span.type": "external",
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~>postgresql",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-node",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-python",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-java~>postgresql",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 559010.6,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-java~opbeans-node",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 559010.6,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-java~opbeans-ruby",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 559010.6,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~>postgresql",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-java",
        "isInverseEdge": true,
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 559010.6,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-python",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-ruby",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>elasticsearch",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": ">elasticsearch",
        "targetData": Object {
          "id": ">elasticsearch",
          "label": "elasticsearch",
          "span.destination.service.resource": "elasticsearch",
          "span.subtype": "elasticsearch",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>postgresql",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>redis",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": ">redis",
        "targetData": Object {
          "id": ">redis",
          "label": "redis",
          "span.destination.service.resource": "redis",
          "span.subtype": "redis",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-python~opbeans-ruby",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~>postgresql",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-go",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-java",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 559010.6,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-python",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-go",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-java",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 559010.6,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-node",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-python",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 47107.7692307692,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-ruby",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-7ed6-high_mean_transaction_duration",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 141536.936507937,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-229a-high_mean_transaction_duration",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "elastic-co-frontend~>resourceGroup{elastic-co-frontend}",
        "source": "elastic-co-frontend",
        "target": "resourceGroup{elastic-co-frontend}",
      },
    },
  ],
}
`;
